Refactored Cluster MGMT UI + Removed Stylish tabs in favor of Boostrap Ones

--- a/app/views/server/distributed/databases.html
+++ b/app/views/server/distributed/databases.html
@@ -1,7 +1,36 @@
 <div class="col-md-12" ng-controller="ClusterDBController">
-  
-  <tabset clazz="clazz">
-    <tab title="{{key}}" icon="icon" context="key" ng-repeat="(key, value) in databases"
-         template-url="views/server/distributed/singleDB.html"></tab>
-  </tabset>
+
+  <!--<tabset clazz="clazz">-->
+  <!--<tab title="{{key}}" icon="icon" context="key" ng-repeat="(key, value) in databases"-->
+  <!--template-url="views/server/distributed/singleDB.html"></tab>-->
+  <!--</tabset>-->
+
+
+  <div class="row row-space">
+    <div class="col-md-6">
+      <form class="form-horizontal">
+
+        <div class="form-group">
+          <label class="control-label col-md-2">
+            <b>Database</b>
+          </label>
+          <div class="col-md-6">
+            <select class="form-control" ng-model="selectedDb">
+              <option ng-repeat="(k,v) in databases" value="{{k}}"> {{k}}</option>
+            </select>
+          </div>
+          <div class="col-md-4">
+
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="row row-space">
+    <div class="col-md-12">
+      <div class="row">
+        <ng-include src="'views/server/distributed/singleDB.html'"></ng-include>
+      </div>
+    </div>
+  </div>
 </div>
