--- a/app/views/server/stats/distributed.html
+++ b/app/views/server/stats/distributed.html
@@ -1,5 +1,4 @@
-<div class="container-fluid" ng-controller="ClusterController">
-
+<div class="row" ng-controller="ClusterController">
 
   <div ng-show="!agentActive">
     <div class="col-md-12 studio-well-tips">
