Implemented https://github.com/orientechnologies/orientdb/issues/6527

--- a/app/views/server/distributed/overview.html
+++ b/app/views/server/distributed/overview.html
@@ -85,7 +85,8 @@
         <b> Cluster CRUD Operations / Sec</b>
       </div>
       <div class="panel-body">
-        <div id="orientdb-cluster" c3chart></div>
+        <!--<div id="orientdb-cluster" c3chart></div>-->
+        <div server-chart server="server" headers="transactionHeaders"></div>
       </div>
     </div>
 
