--- a/app/views/server/distributed/events/logwhen.html
+++ b/app/views/server/distributed/events/logwhen.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <button type="button" class="close" data-dismiss="modal" ng-click="$hide()" aria-hidden="true">×</button>
         <h3>
           <i class="fa fa-bug"></i>
           Log Event</h3>
