--- a/app/views/server/distributed/events/mailwhat.html
+++ b/app/views/server/distributed/events/mailwhat.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <button type="button" class="close" data-dismiss="modal" ng-click="$hide()" aria-hidden="true">×</button>
         <h3>
           <i class="fa fa-envelope"></i>
           Mail Alert
@@ -10,45 +10,61 @@
 
       </div>
       <div class="modal-body">
-        <form name="mailwhatform">
+        <form name="mailwhatform" class="form-horizontal">
           <fieldset class="form_mailwhat">
 
             <div class="form-group">
-              <label>Mail Profile:</label>
-              <select ng-model="eventWhat.profile" ng-options="p.name as p.name for p in profiles" class="form-control">
-                <option value=""></option>
-              </select>
+              <label class="col-sm-2 control-label">Mail Profile:</label>
+              <div class="col-sm-10">
+                <select ng-model="eventWhat.profile" ng-options="p.name as p.name for p in profiles"
+                        class="form-control">
+                  <option value=""></option>
+                </select>
+              </div>
             </div>
             <div class="form-group">
-              <label>From:</label>
-              <input type="email" id="fromAddress" class="form-control" name="name" placeholder="from"
-                     ng-model="eventWhat['fromAddress']" required>
+              <label class="col-sm-2 control-label">From:</label>
+              <div class="col-sm-10">
+                <input type="email" id="fromAddress" class="form-control" name="name" placeholder="from"
+                       ng-model="eventWhat['fromAddress']" required>
+              </div>
             </div>
             <div class="form-group">
-              <label>To:</label>
-              <input type="email" id="toAddress" name="name" class="form-control" placeholder="to"
-                     ng-model="eventWhat['toAddress']" required>
+              <label class="col-sm-2 control-label">To:</label>
+
+              <div class="col-sm-10">
+                <input type="email" id="toAddress" name="name" class="form-control" placeholder="to"
+                       ng-model="eventWhat['toAddress']" required>
+              </div>
             </div>
             <div class="form-group">
-              <label>Cc:</label>
-              <input type="email" id="cc" name="name" class="form-control" placeholder="cc"
-                     ng-model="eventWhat['cc']">
+              <label class="col-sm-2 control-label">Cc:</label>
+              <div class="col-sm-10">
+                <input type="email" id="cc" name="name" class="form-control" placeholder="cc"
+                       ng-model="eventWhat['cc']">
+              </div>
             </div>
             <div class="form-group">
-              <label>Bcc:</label>
-              <input type="email" id="bcc" name="name" class="form-control" placeholder="bcc"
-                     ng-model="eventWhat['bcc']">
+              <label class="col-sm-2 control-label">Bcc:</label>
+              <div class="col-sm-10">
+                <input type="email" id="bcc" name="name" class="form-control" placeholder="bcc"
+                       ng-model="eventWhat['bcc']">
+              </div>
             </div>
             <div class="form-group">
-              <label>Subject:</label>
-              <input type="text" id="subject" name="name" class="form-control" class="input-block-level"
-                     placeholder="subject"
-                     ng-model="eventWhat['subject']" required>
+              <label class="col-sm-2 control-label">Subject:</label>
+              <div class="col-sm-10">
+                <input type="text" id="subject" name="name" class="form-control" class="input-block-level"
+                       placeholder="subject"
+                       ng-model="eventWhat['subject']" required>
+              </div>
             </div>
             <div class="form-group">
-              <label>Body:</label>
+              <label class="col-sm-2 control-label">Body:</label>
+              <div class="col-sm-10">
                 <textarea rows="3" id="description" name="body" class="form-control"
-                          style="height: 200px" placeholder="body" ng-model="eventWhat['body']" required></textarea>
+                          style="height: 150px" placeholder="body" ng-model="eventWhat['body']" required></textarea>
+              </div>
             </div>
           </fieldset>
         </form>
