--- a/app/views/server/general/singleServer.html
+++ b/app/views/server/general/singleServer.html
@@ -43,7 +43,7 @@
       <div class="col-md-6">
         <b>Status:</b> <span ng-class="getStatusLabel(server.status)">{{ server.status }}</span>
 
-        <a ng-show="!agent" href="javascript:void(0)" tabindex="1"
+        <a ng-show="!agentActive" href="javascript:void(0)" tabindex="1"
            data-trigger="focus" data-placement="bottom"
            data-content="{{ 'agent.notFound' | translate:links }}" bs-popover>
           <i class="fa fa-question-circle"></i>
