--- a/app/views/server/distributed/events/logwhen.html
+++ b/app/views/server/distributed/events/logwhen.html
@@ -4,8 +4,8 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" ng-click="$hide()" aria-hidden="true">×</button>
         <h3>
-          <i class="fa fa-bug"></i>
-          Log Event</h3>
+          <i class="fa fa-plug"></i>
+          Status Event</h3>
       </div>
       <div class="modal-body">
         <form name="form_log_when">
