Added Sizes/Texts metrics tabs

--- a/app/views/server/general/metrics.html
+++ b/app/views/server/general/metrics.html
@@ -9,6 +9,7 @@
     <tab title="Chronos" template-url="views/server/general/metrics/chronos.html"></tab>
     <tab title="Counters" template-url="views/server/general/metrics/counters.html"></tab>
     <tab title="Stats" template-url="views/server/general/metrics/stats.html"></tab>
-    <tab title="Hook Values" template-url="views/server/general/metrics/hooks.html"></tab>
+    <tab title="Sizes" template-url="views/server/general/metrics/sizes.html"></tab>
+    <tab title="Texts" template-url="views/server/general/metrics/texts.html"></tab>
   </tabset>
 </div>
