enhancement on alerts mgmt

--- a/app/views/server/distributed/events/httpwhat.html
+++ b/app/views/server/distributed/events/httpwhat.html
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" ng-disabled="httpwhatform.$invalid" ng-click="$hide()">Submit
+        <button type="submit" class="btn btn-primary" ng-disabled="httpwhatform.$invalid" ng-click="$hide()">Ok
         </button>
       </div>
     </div>
