--- a/app/views/server/distributed/events/logwhen.html
+++ b/app/views/server/distributed/events/logwhen.html
@@ -23,7 +23,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" ng-disabled="checkValidForm()" ng-click="$hide()">Submit
+        <button type="button" class="btn btn-primary" ng-disabled="checkValidForm()" ng-click="$hide()">Ok
         </button>
       </div>
     </div>
