--- a/app/views/server/stats/events.html
+++ b/app/views/server/stats/events.html
@@ -107,7 +107,7 @@
                         ng-model="e.what.name"></select>
               </div>
               <div class="col-md-4">
-                <button class="btn  btn-sm" ng-click="configureWhat(e.what)"><i class="fa fa-gear"></i> Configure
+                <button class="btn  btn-sm" ng-click="configureWhat(e)"><i class="fa fa-gear"></i> Configure
                 </button>
               </div>
             </td>
