--- a/app/views/server/general/metrics/chronos.html
+++ b/app/views/server/general/metrics/chronos.html
@@ -55,3 +55,14 @@
     </div>
   </div>
 </div>
+
+
+<h5>You can use the following markers</h5>
+<ul class='indexType'>
+  <li><b>${server}: </b> Name of the server</li>
+  <li><b>${status}</b> Status of the server</li>
+  <li><b>${date}</b> Date</li>
+</ul>
+
+<h5>You can use the following markers</h5><ul class='indexType'><li><b>${server}: </b> Name of the server</li><li><b>${name}</b> Name of the metric</li><li><b>${from}</b> Recording from date</li><li><b>${to}</b> Recording to date</li></ul><h5>For Chronos and Statistics</h5><ul class='indexType'><li><b>${entries}</b> Number of times recorded</li><li><b>${average}</b> Avg value recorded</li><li><b>${max}</b> Max value recorded</li><li><b>${min}</b> Min value recorded</li><li><b>${last}</b>Last value recorded</li><li><b>${total}</b>Total value recorded</li></ul><h5>Counters</h5><ul><li><b>${value}</b>Current value (Valid for Counters)</li></ul>
+
