Implemented https://github.com/orientechnologies/orientdb-studio/issues/353

--- a/app/views/database/schema.html
+++ b/app/views/database/schema.html
@@ -145,7 +145,7 @@
                           class="fa fa-list-alt"></i> Query All
                       </button>
 
-                      <button href="javascript:void(0)" class="btn  btn-xs"
+                      <button href="javascript:void(0)" class="btn  btn-xs" ng-disabled="result['abstract']"
                               ng-click="createRecord(result['name'])">
                         <i
                           class="fa fa-plus"></i> New Record
